--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
 asgiref==3.5.2
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
 click==8.1.3
-colorama==0.4.4       
+colorama==0.4.4
 dj-database-url==0.5.0
 Django==4.0.4
 django-heroku==0.3.1
 Flask==2.1.2
 gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 psycopg2==2.9.3
+requests==2.27.1
 sqlparse==0.4.2
 tzdata==2022.1
+urllib3==1.26.9
 Werkzeug==2.1.2
 whitenoise==6.1.0
 zipp==3.8.0
